--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "testinquirer":"node index1.js"
+    "testinquirer": "node index1.js"
   },
   "bin": {
     "snippet-converter": "index.js"
@@ -20,5 +20,8 @@
   "dependencies": {
     "inquirer": "^6.2.1",
     "xmlbuilder": "^10.1.1"
+  },
+  "devDependencies": {
+    "progress": "^2.0.2"
   }
 }
