--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "inquirer": "^6.2.1",
+    "progress": "^2.0.3",
     "xmlbuilder": "^10.1.1"
   },
-  "devDependencies": {
-    "progress": "^2.0.2"
-  }
+  "devDependencies": {}
 }
