--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "testinquirer": "node index1.js"
+    "start": "node index.js"
   },
   "bin": {
     "snippet-converter": "index.js"
